--- a/Swift#001/Swift#001/Base.lproj/Main.storyboard
+++ b/Swift#001/Swift#001/Base.lproj/Main.storyboard
@@ -16,7 +16,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="haikei.png" translatesAutoresizingMaskIntoConstraints="NO" id="cIT-Dl-Ydq">
+                            <imageView userInteractionEnabled="NO" alpha="0.84999999999999987" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="haikei.png" translatesAutoresizingMaskIntoConstraints="NO" id="cIT-Dl-Ydq">
                                 <rect key="frame" x="0.0" y="0.0" width="219" height="573"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ohp-Qo-dKp">
@@ -26,10 +26,9 @@
                                 <nil key="highlightedColor"/>
                                 <color key="shadowColor" red="1" green="0.43642939814814813" blue="0.27167245370370363" alpha="1" colorSpace="calibratedRGB"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oOc-a3-MAX">
-                                <rect key="frame" x="123" y="358" width="55" height="56"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="52"/>
-                                <state key="normal" title="+">
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oOc-a3-MAX">
+                                <rect key="frame" x="113" y="361" width="94" height="80"/>
+                                <state key="normal" title="+" image="banana.png">
                                     <color key="titleColor" red="0.32815351279999999" green="0.52397924269999996" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
@@ -50,6 +49,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="banana.png" width="1388" height="895"/>
         <image name="haikei.png" width="234" height="867"/>
     </resources>
 </document>
